Remove all draggabilly/droppabilly drag-n-drop code.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
   <div class="demo">
-    <h1>Propogation Demos</h1>
+
+    <hr />
+    <h1>Old Propogation Demos</h1>
     <ul>
       <li><a href="demos/demo1.html">Demo 1: Listeners - Part 1</a></li>
       <li><a href="demos/demo2.html">Demo 2: Listeners - Part 2</a></li>
@@ -16,7 +18,6 @@
       <li><a href="demos/demo5.html">Demo 5: Event Delegation</a></li>
     </ul>
   </div>
-  <script src="draggabilly.pkgd.js"></script>
   <script src="jquery-2.1.1.js"></script>
   <script src="main.js"></script>
 </body>
